--- a/figuras.html
+++ b/figuras.html
@@ -5,17 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <script src="index.js"></script>
-    <title>Calculos</title>
+    <script src="figuras.js"></script>
+    <title>Figuras geometricas</title>
 </head>
 
 <body>
-    <h1>Calculos</h1>
-    <section>
-        <h3>Areas</h3>
-        <h3>Perimetros</h3>
-    </section>
+    <h1>
+        Figuras geometricas
+    </h1>
 </body>
 
 </html>
