--- a/figuras.html
+++ b/figuras.html
@@ -10,10 +10,43 @@
 </head>
 
 <body>
-    <h1>
-        Figuras geometricas
-    </h1>
-    <p>Primer taller curso practico javascript</p>
+    <header>
+        <h1>
+            Figuras geometricas
+        </h1>
+        <p>Primer taller curso practico javascript</p>
+
+        <section>
+            <h2>Calcula el area y perimetro de un cuadrado</h2>
+            <form>
+                <label for="inputCuadrado">
+                    Escribe cuanto mide cada lado de tu cuadrado:
+                </label>
+                <input id="inputCuadrado" type="number ">
+                <button type="button" onclick="calcularPerimetroCuadrado()">Calcular el perimetro</button>
+                <button type="button" onclick="calcularAreaCuadrado()">Calcular el area</button>
+            </form>
+            <form>
+                <label for="inputTriangulo">
+                    Escribe cuanto mide cada lado de tu triangulo:
+                </label>
+                <input id="inputLadoTriangulo" type="number ">
+                <input id="inputLado2Triangulo" type="number ">
+                <input id="inputBaseTriangulo" type="number ">
+                <button type="button" onclick="calcularPerimetroTriangulo()">Calcular el perimetro</button>
+                <button type="button" onclick="calcularAreaTriangulo()">Calcular el area</button>
+            </form>
+            <form>
+                <label for="inputCirculo">
+                    Escribe cuanto mide el radio de circulo:
+                </label>
+                <input id="inputRadioCirculo" type="number ">
+                <button type="button" onclick="calcularDiametroCirculo()">Calcular el diametro</button>
+                <button type="button" onclick="calcularPerimetroCirculo()">Calcular el perimetro</button>
+                <button type="button" onclick="calcularAreaCirculo()">Calcular el area</button>
+            </form>
+        </section>
+    </header>
 </body>
 
 </html>
